# iconforge-rs

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  Cross.toml  LICENSE  LICENSE_RUSTG  README.md  build.rs  typos.toml
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
dmsrc/: iconforge.dm  main.dm  universal_icon.dm
src/: byond.rs  error.rs  jobs.rs  lib.rs
src/cli/: main.rs
src/core/: hash.rs  icon_operations.rs  image_cache.rs  spritesheet.rs  universal_icon.rs
src/core/ffi/: byond_gags.rs  byond_spritesheet.rs  mod.rs
src/iconforge/: blending.rs  byond.rs  byond_gags.rs  byond_spritesheet.rs  gags.rs  icon_operations.rs  image_cache.rs  mod.rs  spritesheet.rs  universal_icon.rs
src/iconforge/ffi/: byond_gags.rs
tests/: dm-tests.rs
tests/dm/: common.dm  iconforge.dme
tests/dm/rsc/: iconforge_gags_config.json  iconforge_gags_reference_config.json
tests/iconforge/: mod.rs
